--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -27,8 +28,11 @@
     "formik-mui": "^5.0.0-alpha.0",
     "mongoose": "^7.0.1",
     "next": "13.1.6",
+    "next-router-mock": "^0.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "typescript": "4.9.5",
     "yup": "^0.32.11"
   },
@@ -37,6 +41,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.36.0",
