--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "eslint-config-next": "13.1.6",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
-    "gridfs-stream": "1.1.1",
+    "gridfs-stream": "^1.1.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.1",
-    "multer": "1.4.5-lts.1",
-    "multer-gridfs-storage": "5.0.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "next": "13.1.6",
     "next-connect": "^0.13.0",
     "next-router-mock": "^0.9.2",
