--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-router-mock": "^0.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.10",
     "react-pdf": "^7.1.2",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
